objects/Direct_Debit_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day_Of_Month__c</fullName>
        <label>Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Period_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_Of_Week__c</fullName>
        <inlineHelpText>If appropriate, the day of the week on which the Customer will be debited.

NB - A value must be provided for this parameter when the Period Type is in &apos;Weekly’,&apos;Fortnightly’,&apos;4 Weekly’,&apos;Weekday in month’.</inlineHelpText>
        <label>Day Of Week</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Period_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MON</fullName>
                </value>
                <value>
                    <fullName>TUE</fullName>
                </value>
                <value>
                    <fullName>WED</fullName>
                </value>
                <value>
                    <fullName>THU</fullName>
                </value>
                <value>
                    <fullName>FRI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EziDebit_Customer_ID__c</fullName>
        <label>EziDebit Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Type__c</fullName>
        <inlineHelpText>The frequency with which you want payments deducted from your Customer.
The frequency is applied to the payment scheduled beginning from the date defined in Start Date.</inlineHelpText>
        <label>Period Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>W</fullName>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>Fortnightly</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 Weekly</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Weekday in month</label>
                </value>
                <value>
                    <fullName>Q</fullName>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>Half Yearly</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yearly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week_Of_Month__c</fullName>
        <inlineHelpText>If appropriate, specifies if debits will occur on the day of the week specified by Day Of Week in the 1/2/3/4 week of each month.

NB - Required and effective only if Period Type is &apos;Weekday in month’.</inlineHelpText>
        <label>Week Of Month</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
                <value>
                    <fullName>Fourth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Direct Debit Schedule</label>
    <nameField>
        <displayFormat>DD-{00000}</displayFormat>
        <label>Direct Debit Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Debit Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>